# kiro

./: Cargo.toml  LICENSE  README.md  flake.nix
client/: Cargo.toml
client/src/: constants.rs  kiro.rs  main.rs  nodes.rs  render.rs  websocket.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
static/: styles.css
templates/: index.html
