[package]
name = "kiro-client"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui_plot = "0.31.0"
flexbuffers = "25.2.10"
futures-util = "0.3.31"
humantime = "2.2.0"
log = "0.4.26"
rand = "0.9.0"
tokio = { version = "1.44.1", features = ["full", "rt"] }
tokio-tungstenite = "0.26.2"
twink = { version = "1.1.3", features = ["log"] }
url = "2.5.4"
