[package]
name = "kiro-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
flexbuffers = "25.2.10"
futures-util = "0.3.31"
log = "0.4.26"
sysinfo = "0.33.1"
tokio = { version = "1.43.0", features = ["full"] }
twink = { version = "1.1.3", features = ["log"] }
